[package]
name = "multi-requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
async-trait = "0.1.56"
structopt = "0.3.26"
